fix btn on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,8 @@ html {
     text-align: center;
     border: none;
     cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
